# calendar-merge

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  config.yaml.template  pyproject.toml
.agents/: AGENTS.md  CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: merge.py
tests/: test_merge.py  test_state_matrix.py
