[project]
name = "calendar-merge"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "icalendar>=6.3.1",
    "pyfangs",
    "pyicloud==2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 🔑 Tell Hatch to include your single module
[tool.hatch.build.targets.wheel]
include = ["src/merge.py"]

[tool.uv.sources]
pyfangs = { git = "ssh://git@github.com/leandrorojas/pyfangs", rev = "v0.7.3" }

# Optional: CLI entry point (runs merge:main)
[project.scripts]
calendar-merge = "merge:main"
