[project]
name = "calendar-merge"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "icalendar>=6.3.1",
    "pyfangs",
    "pyicloud==2.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable common, high-signal rule sets.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter where possible)
    "B008",   # function call in argument default (common pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# 🔑 Tell Hatch to include your single module
[tool.hatch.build.targets.wheel]
include = ["src/merge.py"]

[tool.uv.sources]
pyfangs = { git = "ssh://git@github.com/leandrorojas/pyfangs", rev = "v0.7.3" }

# Optional: CLI entry point (runs merge:main)
[project.scripts]
calendar-merge = "merge:main"
